# sensor-node

./: .cproject  .project  BatteryUsage.xlsx  CMakeLists.txt  Makefile  README.md  noscfg.h  poscfg.h  sensor-node (release).launch  sensor-node.launch  sensor_main.c  uoscfg.h
config/: owcfg.h
